some changes and additions

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-*.jl.*.cov
-*.jl.cov
-*.jl.mem
-.DS_Store
-/Manifest.toml
-/dev/
+#*.jl.*.cov
+#*.jl.cov
+#*.jl.mem
+*.DS_Store
+Manifest.toml
+docs/build/
