--- a/.travis.yml
+++ b/.travis.yml
@@ -18,15 +18,15 @@ fast_finish: true
 #branches:
 #  only:
 #    - master
-jobs:
-	include:
-		- stage: "Documentation"
-		  julia: 1.0
-		  os: linux
-		  script:
-			- julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instanstiate()'
-			- julia --project=docs/ docs/make.jl
-		  after_success: skip
+# jobs:
+# 	include:
+# 		- stage: "Documentation"
+# 		  julia: 1.0
+# 		  os: linux
+# 		  script:
+# 			- julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instanstiate()'
+# 			- julia --project=docs/ docs/make.jl
+# 		  after_success: skip
     
 codecov: true
 
