--- a/.travis.yml
+++ b/.travis.yml
@@ -18,15 +18,6 @@ fast_finish: true
 #branches:
 #  only:
 #    - master
-# jobs:
-# 	include:
-# 		- stage: "Documentation"
-# 		  julia: 1.0
-# 		  os: linux
-# 		  script:
-# 			- julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instanstiate()'
-# 			- julia --project=docs/ docs/make.jl
-# 		  after_success: skip
     
 codecov: true
 
@@ -35,6 +26,13 @@ notifications:
   
 env:
  - PYTHON=""
- 
+  
+jobs:
+	include:
+		- stage: "Documentation"
+		  script:
+			- julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instanstiate()'
+			- julia --project=docs/ docs/make.jl
+      
 after_success:
   - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
