--- a/.travis.yml
+++ b/.travis.yml
@@ -27,12 +27,12 @@ notifications:
 env:
  - PYTHON=""
   
-jobs:
-    include:
-	- stage: "Documentation"
-	  script:
-		- julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instanstiate()'
-		- julia --project=docs/ docs/make.jl
+# jobs:
+#     include:
+# 	- stage: "Documentation"
+# 	  script:
+# 		- julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instanstiate()'
+# 		- julia --project=docs/ docs/make.jl
       
 after_success:
   - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
