--- a/.travis.yml
+++ b/.travis.yml
@@ -30,9 +30,9 @@ env:
 # jobs:
 #     include:
 # 	- stage: "Documentation"
-# 	  script:
-# 		- julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instanstiate()'
-# 		- julia --project=docs/ docs/make.jl
+script:
+  - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instanstiate()'
+  - julia --project=docs/ docs/make.jl
       
 after_success:
   - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
