--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ env:
 #     include:
 # 	- stage: "Documentation"
 script:
-  - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instanstiate()'
+  - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
   - julia --project=docs/ docs/make.jl
       
 after_success:
