--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ env:
 # 	- stage: "Documentation"
 script:
   - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
-  - julia --project=docs/ docs/make.jl
+  - julia --project=docs/ -e 'using Pkg; Pkg.add("Documenter"); using Documenter; include("docs/make.jl")'
       
 after_success:
   - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
