--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ allow failures:
   
 fast_finish: true
 
-#branches:
-#  only:
-#    - master
+branches:
+ only:
+   - master
     
 codecov: true
 
