--- a/.travis.yml
+++ b/.travis.yml
@@ -37,8 +37,8 @@ script:
 #  - julia --project=docs/ -e 'using Pkg; Pkg.add("Documenter"); using Documenter; include("docs/make.jl")'
       
 after_success:
-  - julia -e 'using Pkg; Pkg.add("Documenter")'
-  - julia --project=docs/ -e 'include("docs/make.jl")'
+  #- julia -e 'using Pkg; Pkg.add("Documenter")'
+  #- julia --project=docs/ -e 'include("docs/make.jl")'
   - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
   - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Coveralls.submit(process_folder())'
 
@@ -50,5 +50,5 @@ jobs:
       script:
         - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
                                                Pkg.instantiate()'
-        - julia --project=docs/ docs/make.jl
+        - julia --project=docs/ -e 'using Pkg; Pkg.add("Documenter"); include("docs/make.jl")'
       after_success: skip
