--- a/.travis.yml
+++ b/.travis.yml
@@ -26,19 +26,11 @@ notifications:
   
 env:
  - PYTHON=""
-  
-# jobs:
-#     include:
-# 	- stage: "Documentation"
+ 
 script:
-#  - julia -e 'using Pkg; Pkg.clone(pwd())'
   - julia -e 'using Pkg; Pkg.test("ScenTrees",coverage=true)'
-#  - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
-#  - julia --project=docs/ -e 'using Pkg; Pkg.add("Documenter"); using Documenter; include("docs/make.jl")'
       
 after_success:
-  #- julia -e 'using Pkg; Pkg.add("Documenter")'
-  #- julia --project=docs/ -e 'include("docs/make.jl")'
   - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
   - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Coveralls.submit(process_folder())'
 
@@ -48,7 +40,6 @@ jobs:
       julia: 1.0
       os: linux
       script:
-        - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
-                                               Pkg.instantiate()'
+        - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
         - julia --project=docs/ -e 'using Pkg; Pkg.add("Documenter"); include("docs/make.jl")'
       after_success: skip
