--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,8 @@ codecov: true
 notifications:
   email: false
   
-#env:
-# - PYTHON=""
+env:
+ - PYTHON=""
  
 script:
   - julia -e 'using Pkg; Pkg.test("ScenTrees",coverage=true)'
@@ -42,4 +42,4 @@ jobs:
       script:
         - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
         - julia --project=docs/ -e 'using Pkg; Pkg.add("Documenter"); include("docs/make.jl")'
-      after_success: skip
+      #after_success: skip
