--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,15 @@ codecov: true
 notifications:
   email: false
   
-ENV["PYTHON"] = "python3"
+# addons:
+#   apt:
+#     packages:
+#       - python-matplotlib
+#       - python3-matplotlib
+env:
+  matrix:
+    - PYTHON=python  # python 2.7
+    - PYTHON=python3 # python 3.5
  
 script:
   - julia -e 'using Pkg; Pkg.test("ScenTrees",coverage=true)'
