--- a/.travis.yml
+++ b/.travis.yml
@@ -31,13 +31,9 @@ matrix:
   #- PYTHON=python  # python 2.7
   #- PYTHON=python3 # python 3.5
   - PYTHON=Conda-python
- 
-script: # the default script is equivalent to the following
- - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
- - travis_wait 30 julia --project --color=yes --check-bounds=yes -e 'using Pkg; Pkg.instantiate(); Pkg.build(); Pkg.test( ; coverage=true)';
 
-#script:
-#  - julia -e 'using Pkg; Pkg.test("ScenTrees",coverage=true)'
+script:
+  - julia -e 'using Pkg; Pkg.test("ScenTrees",coverage=true)'
 
 jobs:
   include:
