--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
 # Documentation: http://docs.travis-ci.com/user/languages/julia/
 language: julia
-env:
- - CONDA_JL_VERSION=2
 os:
   - linux
 #  - osx
@@ -27,10 +25,8 @@ codecov: true
 notifications:
   email: false
   
-matrix:
-  #- PYTHON=python  # python 2.7
-  #- PYTHON=python3 # python 3.5
-  - PYTHON=Conda-python
+env:
+  - PYTHON=""
 
 script:
   - julia -e 'using Pkg; Pkg.test("ScenTrees",coverage=true)'
