--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ jobs:
       os: linux
       script:
         - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
-        - julia --project=docs/ -e 'using Pkg; Pkg.add("Documenter"); include("docs/make.jl")'
+        - julia --project=docs/ --color=yes docs/make.jl
       after_success: skip
 
 after_success:
