--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -17,7 +17,7 @@ extra_javascript:
 - https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML
 - assets/mathjaxhelper.js
 
-docs_dir: 'src'
+docs_dir: 'build' #from Julia's Documenter.jl
 
 pages:
 - Home: index.md
