--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,9 @@ jobs:
       script:
         - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
         - julia --project=docs/ -e 'using Pkg; Pkg.add("Documenter"); using Documenter; include("docs/make.jl")'
-      after_success: skip
+      after_success:
+        - julia -e 'using Pkg; Pkg.add("Documenter")'
+        - julia -e 'cd(Pkg.dir("ScenTrees")); include(joinpath("docs", "make.jl"))'
 
 after_success:
   - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
