--- a/.travis.yml
+++ b/.travis.yml
@@ -10,25 +10,25 @@ julia:
   - 1.2
   - nightly
   
-allow failures:
-  - julia: nightly
-  
-fast_finish: true
-
 branches:
  only:
    - master
    
+matrix:
+  fast_finish: true
+  allow_failures:
+    - julia: nightly
+   
 codecov: true
 
-#notifications:
-#  email: false
+notifications:
+  email: false
   
 env:
   - PYTHON=""
 
-script:
-  - julia -e 'using Pkg; Pkg.test("ScenTrees",coverage=true)'
+#script:
+#  - julia -e 'using Pkg; Pkg.test("ScenTrees",coverage=true)'
 
 jobs:
   include:
@@ -41,7 +41,5 @@ jobs:
 #       after_success: skip
        
 after_success:
-  - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+  - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
   - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
-#  - julia -e 'using Pkg; Pkg.add("Documenter")'
-#  - julia -e 'using Pkg; cd(Pkg.dir("ScenTrees")); include(joinpath("docs", "make.jl"))'
