--- a/Project.toml
+++ b/Project.toml
@@ -20,6 +20,12 @@ XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 
 [compat]
 julia = "1"
+Distributions = "0.21, 1"
+StaticArrays = "^0.11.0, ^1"
+DataFrames = "^0.19.3, ^1"
+PyPlot = "^2.8.2, ^1"
+CSV = "^0.5.14, ^1"
+XSLX = "^0.5.8, ^1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
