--- a/Project.toml
+++ b/Project.toml
@@ -25,7 +25,7 @@ StaticArrays = "^0.11.0, ^1"
 DataFrames = "^0.19.3, ^1"
 PyPlot = "^2.8.2, ^1"
 CSV = "^0.5.14, ^1"
-XSLX = "^0.5.8, ^1"
+XLSX = "^0.5.8, ^1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
