--- a/Project.toml
+++ b/Project.toml
@@ -16,11 +16,11 @@ XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 
 [compat]
 julia = "1.0"
-Distributions = "0.21.9, 0.21.10, 0.21.11, 0.21.12, 0.22.0, 0.22.1, 0.22.2, 0.22.3, 0.22.4, 0.22.5"
-DataFrames = "0.20.0, 0.20.1, 0.20.2"
-PyPlot = "2.8.0, 2.8.1, 2.8.2"
-CSV = "0.5.19, 0.5.20, 0.5.21, 0.5.22, 0.5.23, 0.5.24, 0.5.25, 0.5.26"
-XLSX = "0.5.6, 0.5.7, 0.5.8, 0.6.0, 0.6.1"
+Distributions = "0.23.1"
+DataFrames = "0.21.0"
+PyPlot = "2.9.0"
+CSV = "0.6.2"
+XLSX = "0.6.1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
