--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,18 @@
 # Documentation: http://docs.travis-ci.com/user/languages/julia/
 language: julia
+codecov: true
+coveralls: true
 os:
   - linux
-#  - osx
+#  - osx  # Disable to speed up CI. JuMP has no binary dependency so the result
+          # with osx and linux should be similar.
   
 julia:
   - 1.0
-  - 1.1
-  - 1.2
-  - 1.3
-  - nightly
+  #- 1.1 # Disabled to speed up CI
+  #- 1.2
+  #- 1.3
+  - 1.4
 
 after_success:
   - julia -e 'import Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder()); Coveralls.submit(process_folder())'
@@ -17,9 +20,7 @@ after_success:
 branches:
  only:
    - master
-   - /^v\d+\.\d+(\.\d+)?(-\S*)?$/
- 
-#codecov: true
+   - /^release-.*$/
 
 notifications:
   email: false
