--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,12 @@
 # Documentation: http://docs.travis-ci.com/user/languages/julia/
 language: julia
-codecov: true
-coveralls: true
 os:
   - linux
-#  - osx  # Disable to speed up CI. JuMP has no binary dependency so the result
-          # with osx and linux should be similar.
   
 julia:
   - 1.0
-  #- 1.1 # Disabled to speed up CI
-  #- 1.2
-  #- 1.3
   - 1.4
+  - nightly
 
 after_success:
   - julia -e 'import Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder()); Coveralls.submit(process_folder())'
@@ -20,15 +14,12 @@ after_success:
 branches:
  only:
    - master
-   - /^release-.*$/
-
+codecov: true
+coveralls: true
 notifications:
-  email: false
-  
+  email: false  
 env:
   - PYTHON=""
-
-
 jobs:
   fast_finish: true
   allow_failures:
@@ -41,7 +32,5 @@ jobs:
         - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
         - julia --project=docs/ -e 'using Pkg; Pkg.add("Documenter"); using Documenter; include("docs/make.jl")'
       after_success: skip
-       
-#after_success:
-#  - julia -e 'using Pkg; cd(Pkg.dir("ScenTrees")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
-#  - julia -e 'using Pkg; cd(Pkg.dir("ScenTrees")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+      
+      
