Add more on branches

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,10 @@ after_success:
   - julia -e 'import Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder()); Coveralls.submit(process_folder())'
   
 branches:
- only:
-   - master
+  only:
+    - master
+    - /^release-.*$/
+    - /^v\d+\.\d+(\.\d+)?(-\S*)?$/
    
 notifications:
   email: false
