--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,9 @@ after_success:
   
 branches:
   only:
-    - master
+    - main
+    - /^release-.*$/
+    - /^v\d+\.\d+(\.\d+)?(-\S*)?$/
    
 notifications:
   email: false
