--- a/Project.toml
+++ b/Project.toml
@@ -15,15 +15,15 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 
 [compat]
-CSV = "0.7"
-DataFrames = "1"
+CSV = "0.7, 0.8, 0.9, 0.10"
+DataFrames = "0.21, 1"
 Distributions = "0.25"
 LinearAlgebra = "<0.0.1, 1"
 PyPlot = "2.9.0"
 Random = "<0.0.1, 1"
 Statistics = "<0.0.1, 1"
 Test = "<0.0.1, 1"
-XLSX = "0.7"
+XLSX = "0.7, 0.8, 0.9, 0.10"
 julia = "1"
 
 [extras]
