--- a/.travis.yml
+++ b/.travis.yml
@@ -28,9 +28,7 @@ codecov: true
 coveralls: true
 
 matrix:
-  - PYTHON=Conda-python
-before_install:
-  - julia -e 'ENV["PYTHON"]=""; Pkg.add("Conda"); using Conda;  Conda.add("python==2.7.13"); Conda.add("matplotlib==2.0.1"); Conda.add("basemap"); Pkg.add("PyCall"); Pkg.build("PyCall"); Pkg.add("PyPlot");
+  - PYTHON="pythoncommand"
 jobs:
   fast_finish: true
   allow_failures:
